--- a/src/pxe-update.in
+++ b/src/pxe-update.in
@@ -930,16 +930,22 @@ for RELEASE in $RELEASES_LIST ; do
               "APPEND root=/dev/nfs boot=$BOOT_METHOD netboot=nfs nfsroot=$LIVE_NFS_SERVER_IP:$LIVE_NFS_SERVER_DIR/$DISTRIB/$CODENAME/$ARCH/$DESKTOP $LIVE_LOCALIZATION_OPTIONS initrd=dists/$DISTRIB/$CODENAME/$ARCH/livecd/$DESKTOP/$(basename "$INITRD") $APPEND_OPTIONS --" \
               >> "$CODENAME_LIVE_MENU_FILE"
 
-            # Mint doesn't provide netboot installer, so we have to copy the splash screen from ISO contents
+            # Mint doesn't provide netboot installer, so we have to create and/or copy missing files
             if [ "$DISTRIB" = "mint" ] ; then
-              print_verbose "Copying Linux Mint splash screen $LIVE_CONTENTS_WORKDIR/isolinux/splash.$SPLASH_EXT to $WORK_DIR/boot-screens"
+
               [ ! -d "$WORK_DIR/boot-screens" ] && mkdir -p "$WORK_DIR/boot-screens"
+
+              print_verbose "Creating $DISTRIB $CODENAME $ARCH menu file $CODENAME_ORIG_TXT_MENU_FILE"
+              printf "" > $CODENAME_ORIG_TXT_MENU_FILE
+
+              print_verbose "Copying $DISTRIB splash screen $LIVE_CONTENTS_WORKDIR/isolinux/splash.$SPLASH_EXT to $WORK_DIR/boot-screens"
               cp -af "$LIVE_CONTENTS_WORKDIR/isolinux/splash.$SPLASH_EXT" "$WORK_DIR/boot-screens"
+
               print_verbose "Creating $DISTRIB $CODENAME standard menu file $WORK_DIR/boot-screens/stdmenu.cfg"
               printf "%s\n%s\n" \
                 "MENU BACKGROUND dists/$DISTRIB/$CODENAME/$ARCH/boot-screens/splash.$SPLASH_EXT" \
                 "MENU VSHIFT 6" \
-                > "$CODENAME_ORIG_TXT_MENU_FILE"
+                > "$WORK_DIR/boot-screens/stdmenu.cfg"
             fi
 
           fi
