--- a/src/pxe-update.in
+++ b/src/pxe-update.in
@@ -409,16 +409,21 @@ for RELEASE in $RELEASES_LIST ; do
       fi
 
       # Ubuntu "Suite" conversion
-      # I don't like the idea to rely on parsing a web page but with Ubuntu I didn't find anything better
+      # I don't like the idea to rely on parsing a web page, but with Ubuntu I didn't find anything better
       get_remote_file "http://releases.ubuntu.com" "$RELEASE_FILE"
       if [ -z "$UBUNTU_STABLE" ] ; then
-        UBUNTU_STABLE=$(grep "<li>.*Ubuntu" "$RELEASE_FILE" | head -n 1 | sed -e "s/^.*=\"//" -e "s/\/\".*$//")
-        UBUNTU_STABLE_VERSION=$(grep "<li>.*Ubuntu" "$RELEASE_FILE" | head -n 1 | sed -e "s/^.*Ubuntu //" -e "s/ .*$//")
-        UBUNTU_STABLE_VER_MAJ=$(echo "$UBUNTU_STABLE_VERSION" | cut -d "." -f 1)
-        UBUNTU_STABLE_VER_MIN=$(echo "$UBUNTU_STABLE_VERSION" | cut -d "." -f 2)
-        UBUNTU_LTS=$(grep "<li>.*Ubuntu.*LTS" "$RELEASE_FILE" | head -n 1 | sed -e "s/^.*=\"//" -e "s/\/\".*$//")
-        UBUNTU_OLDSTABLE=$(grep "<li>.*Ubuntu" "$RELEASE_FILE" | head -n 2 | tail -n 1 | sed -e "s/^.*=\"//" -e "s/\/\".*$//")
-        UBUNTU_OLDLTS=$(grep "<li>.*Ubuntu.*LTS" "$RELEASE_FILE" | head -n 2 | tail -n 1 | sed -e "s/^.*=\"//" -e "s/\/\".*$//")
+        UBUNTU_RELEASES="$(grep "p-heading--four" "$RELEASE_FILE" | sed -E "s/^.*a href=\"([a-z]+)\/.*>Ubuntu ([0-9\.]+( LTS)*).*$/\2:\1/" | sort -n)"
+        UBUNTU_RELEASES_LTS="$(printf "%s" "$UBUNTU_RELEASES" | grep "LTS")"
+        #UBUNTU_RELEASES_ESM="$(grep "p-heading--five" "$RELEASE_FILE" | sed -E "s/^.*a href=\"([a-z]+)\/.*>Ubuntu ([0-9\.]+( LTS)*).*$/\2:\1/" | sort -n)"
+        UBUNTU_STABLE="$(printf "%s" "$UBUNTU_RELEASES" | tail -n 1 | cut -d : -f 2)"
+        UBUNTU_STABLE_VERSION="$(printf "%s" "$UBUNTU_RELEASES" | tail -n 1 | sed -E "s/^([0-9]{2}\.[0-9]{2}).*$/\1/")"
+        UBUNTU_STABLE_VER_MAJ="${UBUNTU_STABLE_VERSION%.*}"
+        UBUNTU_STABLE_VER_MIN="${UBUNTU_STABLE_VERSION#*.}"
+        UBUNTU_OLDSTABLE="$(printf "%s" "$UBUNTU_RELEASES" | tail -n 2 | head -n 1 | cut -d : -f 2)"
+        UBUNTU_LTS="$(printf "%s" "$UBUNTU_RELEASES_LTS" | tail -n 1 | cut -d : -f 2)"
+        UBUNTU_OLDLTS="$(printf "%s" "$UBUNTU_RELEASES_LTS" | tail -n 2 | head -n 1 | cut -d : -f 2)"
+        #UBUNTU_ESM="$(printf "%s" "$UBUNTU_RELEASES_ESM" | tail -n 1 | cut -d : -f 2)"
+        #UBUNTU_OLDESM="$(printf "%s" "$UBUNTU_RELEASES_ESM" | tail -n 2 | head -n 1 | cut -d : -f 2)"
         print_debug_var "UBUNTU_STABLE" "UBUNTU_STABLE_VERSION" "UBUNTU_STABLE_VER_MAJ" "UBUNTU_STABLE_VER_MIN" "UBUNTU_LTS" "UBUNTU_OLDSTABLE" "UBUNTU_OLDLTS"
       fi
 
