--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pxe-update
 Section: net
 Priority: optional
 Maintainer: Raphaël Halimi <raphael.halimi@gmail.com>
-Build-Depends: debhelper (>= 11)
+Build-Depends: debhelper-compat (= 12)
 Standards-Version: 4.3.0
 Rules-Requires-Root: no
 Homepage: https://github.com/MoonSweep/pxe-update
